tests/spec/compile-fail/124_task_context_thread_escape.zn
// category: compile-fail
// profile: hosted
// purpose: TaskContext cannot be captured by another thread or concurrency boundary

module tests.fail.taskContextThreadEscape;

async fn runBad(move work: Work, ctx: TaskContext) -> Result<Unit, Error> {
    val handle = try Thread.spawn(move () -> Unit {
        if ctx.isCancellationRequested() { // expected-error: TaskContext cannot be captured by Thread.spawn
            return;
        }
        return;
    });

    try move handle.join();
    return process(move work);
}

fn bad(move runtime: Runtime, move work: Work) -> Result<Unit, Error> {
    val task = try runtime.spawnWithContext(
        move (ctx: TaskContext) => runBad(move work, ctx)
    );

    return try mut runtime.blockOn(move task);
}
